force-app/main/default/objects/Account/fields/Bill_By_Email__c.field-meta.xml
<CustomField>
    <fullName>Bill_By_Email__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Bill By Email?</label>
    <type>Checkbox</type>
</CustomField>