force-app/main/default/objects/Account/fields/Some_Number__c.field-meta.xml
<CustomField>
    <fullName>Some_Number__c</fullName>
    <label>Some Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>