force-app/main/default/objects/Account/validationRules/Test2.validationRule-meta.xml
<ValidationRule>
    <fullName>Test2</fullName>
    <active>true</active>
    <description>This is a test Anju/Dejan is working on</description>
    <errorConditionFormula>!ISNULL(BillingCity) &amp;&amp; !ISNULL(BillingState)</errorConditionFormula>
    <errorMessage>Billing City and State are req</errorMessage>
</ValidationRule>